Adding functionality to the generator.